sessionできるように (#61)
* sessionできるように

* fix

* fix
